fix supersmall sizes on IE GS-1338

--- a/src/webapp/res/css/global.css
+++ b/src/webapp/res/css/global.css
@@ -1,7 +1,7 @@
     /*
    -----------------------------------------------
    Greatschools.net Base Styles
-   $Id: global.css,v 1.91 2006/01/28 01:02:32 apeterson Exp $
+   $Id: global.css,v 1.92 2006/01/28 01:15:33 apeterson Exp $
 
    font-size: see http://www.thenoodleincident.com/tutorials/typography/template.html
 
@@ -748,9 +748,8 @@
     }
 
     table.navOrange td.L {
-        background: #fad3ae url( ../img/box/border_orange_L.gif ) top left repeat-x;
-        border-left: 1px solid #ccc;
-        border-left: 1px solid #eb7a31;
+        background: #fad3ae url( ../img/box/border_orange_L.gif ) top left repeat-y;
+        border-left: 0px solid #eb7a31;
         font-size: 1px;
     }
 
